# uswift

./: CMakeLists.txt  Package.swift  README.md  readme.md
Sources/: CMakeLists.txt
Sources/Core/: Assert.swift  CMakeLists.txt  CompilerProtocols.swift  Swift.swift
Sources/Core/Float/: Double.swift  Float.swift  FloatingPointSign.swift
Sources/Core/Int/: Int.swift  Int16.swift  Int32.swift  Int64.swift  Int8.swift
Sources/Core/Other/: Assert.swift  C.swift  Operators.swift  Protocols.swift
Sources/Core/Pointer/: OpaquePointer.swift  UnsafeMutablePointer.swift  UnsafeMutableRawPointer.swift  UnsafePointer.swift  UnsafeRawPointer.swift  _Pointer.swift
Sources/Core/Protocols/: AdditiveArithmetic.swift  BinaryFloatingPoint.swift  BinaryInteger.swift  Comparable.swift  Equatable.swift  FixedWidthInteger.swift  FloatingPoint.swift  Hashable.swift  Numeric.swift  RangeExpression.swift  SignedInteger.swift  SignedNumeric.swift  Strideable.swift
Sources/Core/Types/: Bool.swift  Optional.swift  Range.swift
Sources/Core/UInt/: UInt.swift  UInt16.swift  UInt32.swift  UInt64.swift  UInt8.swift
Sources/Onone/: CMakeLists.txt
Sources/Runtime/: CMakeLists.txt  HeapObject.c  Metadata.c  Visibility.h  module.modulemap
Sources/_Concurrency/: CMakeLists.txt
